--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,7 @@
 /* Цвет фона героя и футера background: #2F303A; */
 /* Цвет фона Хедера background: #FFFFFF; */
 /* Цвет фона верхней части maim background: #FFFFFF; */
-/* Цвет фона нижней части maim background: #F5F4FA; */
-
+/* Цвет фона нижней части maim background: #F5F4FA; */ 
 :root {
     --primary-text-color: #757575;
     --secondary-text-color: #212121;
@@ -108,6 +107,17 @@ p {
 
 .nav .active-link {
     color: var(--active-link-color);
+}
+
+.active-link::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #2196F3;
+    border-radius: 2px;
+    position: relative;
+    top: 32px;
 }
 
 .contacts-link {
@@ -251,6 +261,26 @@ p {
 
 .feature .item + .item {
     margin-left: 30px;
+}
+
+.feature-img {
+    position: relative;
+    height: 294px;
+}
+
+.feature-text {
+    position: absolute;
+    width: 370px;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    color: #ffffff;
+    text-align: center;
+    font-weight: 700;
+    line-height: 1.17;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    text-transform: uppercase;
+    bottom: 0;
 }
 
 .team-section {
@@ -482,9 +512,11 @@ address {
     cursor: pointer;
 }
 
-.filter-button:hover {
+.filter-button:hover,
+.filter-button:focus {
     background-color:var(--active-link-color);
     color: #FFFFFF;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-section {
@@ -502,9 +534,9 @@ address {
     border: 1px solid #EEEEEE;
 }
 
-.portfolio-list .item:hover {
+/* .portfolio-list .item:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+} */
 
 .portfolio-list .item:nth-last-child(-n+3) {
     margin-bottom: 0;
@@ -512,6 +544,50 @@ address {
 
 .portfolio-img {
     width: 370px;
+}
+
+.card {
+    height: 294px;
+    position: relative;
+    overflow: hidden;
+}
+
+.card-shadow {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    opacity: 0;
+    visibility: inherit;
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list .item:hover .card-shadow,
+.portfolio-list .link:focus .card-shadow {
+    transform: opacity: 1;
+}
+
+.card-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 294px;
+    width: 370px;
+    padding: 63px 24px;
+    background: rgba(33, 150, 243, 0.9);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.56;
+    color: #ffffff;
+    transform: translateY(100%);
+    
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list .item:hover .card-hover,
+.portfolio-list .link:focus .card-hover {
+    transform: translateY(0);
 }
 
 .portfolio-description {
