--- a/css/styles.css
+++ b/css/styles.css
@@ -200,6 +200,57 @@ p {
     border: 0;
 }
 
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+
+    opacity: 1;
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    min-height: 581px;
+    min-width: 528px;
+    border-radius: 4px;
+
+    background: #ffffff;
+}
+
+.icon-close {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+
+    height: 30px;
+    width: 30px;
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    border-radius: 50%; 
+    padding: 6px;
+}
+
+.close-button {
+    border: 0;
+}
 
 .section-h {
     color: var(--secondary-text-color);
@@ -534,9 +585,9 @@ address {
     border: 1px solid #EEEEEE;
 }
 
-/* .portfolio-list .item:hover {
+.portfolio-list .item:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-} */
+}
 
 .portfolio-list .item:nth-last-child(-n+3) {
     margin-bottom: 0;
@@ -552,7 +603,7 @@ address {
     overflow: hidden;
 }
 
-.card-shadow {
+/* .card-shadow {
     position: relative;
     width: 100%;
     height: 100%;
@@ -561,12 +612,12 @@ address {
     visibility: inherit;
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.portfolio-list .item:hover .card-shadow,
+/* .portfolio-list .item:hover .card-shadow,
 .portfolio-list .link:focus .card-shadow {
     transform: opacity: 1;
-}
+} */
 
 .card-hover {
     position: absolute;
