--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,10 @@ p {
     margin-bottom: 0;
 }
 
+textarea {
+    resize: none;
+}
+
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -45,11 +49,21 @@ p {
 }
 
 .icon-contact {
-    width: 16px;
-    height: 12px;
     fill: var(--primary-text-color);
     vertical-align: middle;
     margin-right: 10px;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mail {
+    height: 12px;
+    width: 16px;
+}
+
+.phone {
+    height: 16px;
+    width: 10px;
 }
 
 .container {
@@ -98,6 +112,8 @@ p {
     letter-spacing: 0.02em;
     padding-top: 32px;
     padding-bottom: 32px;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav a:hover,
@@ -130,7 +146,8 @@ p {
     margin-left: 50px;
 }
 
-.contact-link:hover .icon-contact {
+.contact-link:hover .icon-contact,
+.contact-link:focus .icon-contact {
     fill: var(--active-link-color);
 }
 
@@ -144,6 +161,8 @@ p {
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link a:hover,
@@ -229,11 +248,114 @@ p {
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    min-height: 581px;
-    min-width: 528px;
+    min-height: 580px;
+    min-width: 530px;
     border-radius: 4px;
 
     background: #ffffff;
+}
+
+.modal-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 0;
+    margin-bottom: 12px;
+
+    color: #212121;
+}
+
+.form {
+    width: 530px;
+    height: 580px;
+    padding: 40px;
+}
+
+.form-icon {
+    position: absolute;
+    bottom: 11px;
+    left: 12px;
+
+    height: 18px;
+    width: 18px;
+
+    fill: var(--secondary-text-color);
+}
+
+.form-field:hover .form-icon {
+    fill: var(--active-link-color);
+}
+
+.form-field {
+    position: relative;
+
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-field-comment {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-field label,
+.form-field-comment label {
+    margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.17;
+}
+
+.form-field input {
+    margin: 0;
+    padding: 0 15px 0 42px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.form-field input:hover,
+.form-field input:focus,
+.form-field-comment textarea:hover {
+    border: 1px solid var(--active-link-color);
+}
+
+.form-field-comment textarea {
+    height: 120px;
+    padding: 12px 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.form-term {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.term-link {
+    color: var(--active-link-color);
+}
+
+.button-submit {
+    display: block;
+    padding: 10px 55px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    color: #ffffff;
+    background-color: var(--active-link-color);
+    border: 0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .icon-close {
@@ -246,10 +368,16 @@ p {
     border: solid 1px rgba(0, 0, 0, 0.1);
     border-radius: 50%; 
     padding: 6px;
+    fill: #000;
+}
+
+.icon-close:hover {
+    fill: var(--active-link-color);
 }
 
 .close-button {
     border: 0;
+    cursor: pointer;
 }
 
 .section-h {
@@ -387,6 +515,11 @@ p {
     border-radius: 50%;
 }
 
+.team-icon-a .team-icon-link {
+    background-color: #fff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .team-icon-a:hover .team-icon-link{
     background-color: var(--active-link-color);
 }
@@ -396,6 +529,8 @@ p {
     height: 20px;
     fill: #AFB1B8;
     margin: 12px;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon-a:hover .team-icon {
@@ -439,6 +574,8 @@ p {
     border-radius: 4px;
     width: 170px;
     height: 92px;
+
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .regular-customers-icon {
@@ -446,6 +583,8 @@ p {
     height: 60px;
     margin: 16px 32px;
     fill: #AFB1B8;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .regular-customers-icon-a:hover .regular-customers-div {
@@ -523,6 +662,8 @@ address {
     width: 44px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-footer-icon-a:hover .social-footer-icon-div{
@@ -531,6 +672,60 @@ address {
 
 .social-footer-icon-list .item-snet + .item-snet {
     margin-left: 10px;
+}
+
+.footer-form {
+    margin-left: 93px;
+}
+
+.footer-form input {
+    height: 50px;
+    width: 358px;
+    padding-left: 16px;
+    padding-right: 16px;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    background: #2F303A;
+    color: #ffffff;
+}
+
+.footer-form-label {
+    display: block;
+    margin-bottom: 20px;
+
+    color: #ffffff;
+
+    font-weight: 700;
+    line-height: 1.14;
+    text-transform: uppercase;
+}
+
+.footer-form-button {
+    height: 50px;
+    width: 200px;
+    border: 0;
+    margin-left: 12px;
+    
+    color: #ffffff;
+    background-color: var(--active-link-color);
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    font-weight: 700;
+    font-size: 16px;
+    letter-spacing: 0.06em;
+    line-height: 1.88;
+}
+
+.footer-form-icon {
+    height: 24px;
+    width: 24px;
+    vertical-align: middle;
+    margin-left: 10px;
+
+    fill: #ffffff;
 }
 
 /* Стили Портфолио */
