--- a/css/styles.css
+++ b/css/styles.css
@@ -756,6 +756,10 @@ address {
     border: 0;
     padding: 6px 22px;
     cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-button:hover,
@@ -778,9 +782,11 @@ address {
 .portfolio-list .item {
     margin-bottom: 30px;
     border: 1px solid #EEEEEE;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list .item:hover {
+.portfolio-list .item:hover,
+.portfolio-list .item:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -797,22 +803,6 @@ address {
     position: relative;
     overflow: hidden;
 }
-
-/* .card-shadow {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    opacity: 0;
-    visibility: inherit;
-
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
-
-/* .portfolio-list .item:hover .card-shadow,
-.portfolio-list .link:focus .card-shadow {
-    transform: opacity: 1;
-} */
 
 .card-hover {
     position: absolute;
