--- a/css/styles.css
+++ b/css/styles.css
@@ -172,8 +172,7 @@ textarea {
 
 .hero-section {
     background-color: #2F303A;
-    background: rgba(47, 48, 58, 0.4);
-    background-image: url(../images/hero-bgimg-min.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bgimg-min.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -399,6 +398,9 @@ textarea {
 }
 
 .privelege-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 270px;
     height: 120px;
     background-color: var(--secondary-bgcolor);
@@ -409,7 +411,6 @@ textarea {
 .privelege-icon {
     width: 70px;
     height: 70px;
-    margin: 25px 100px;
 }
 
 .privelege-list {
@@ -569,22 +570,24 @@ textarea {
     justify-content:center;
 }
 
-.regular-customers-div {
+.regular-customers-icon {
+    width: 106px;
+    height: 60px;
+    fill: #AFB1B8;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.regular-customers-icon-a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     width: 170px;
     height: 92px;
 
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.regular-customers-icon {
-    width: 106px;
-    height: 60px;
-    margin: 16px 32px;
-    fill: #AFB1B8;
-
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .regular-customers-icon-a:hover .regular-customers-div {
