--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,8 @@ textarea {
     fill: var(--secondary-text-color);
 }
 
-.form-field:hover .form-icon {
+.form-field:hover .form-icon,
+.form-field:focus .form-icon {
     fill: var(--active-link-color);
 }
 
@@ -318,7 +319,8 @@ textarea {
 
 .form-field input:hover,
 .form-field input:focus,
-.form-field-comment textarea:hover {
+.form-field-comment textarea:hover,
+.form-field-comment textarea:focus {
     border: 1px solid var(--active-link-color);
 }
 
@@ -370,7 +372,8 @@ textarea {
     fill: #000;
 }
 
-.icon-close:hover {
+.icon-close:hover,
+.icon-close:focus {
     fill: var(--active-link-color);
 }
 
@@ -521,7 +524,8 @@ textarea {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-icon-a:hover .team-icon-link{
+.team-icon-a:hover .team-icon-link,
+.team-icon-a:focus .team-icon-link {
     background-color: var(--active-link-color);
 }
 
@@ -534,7 +538,8 @@ textarea {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-icon-a:hover .team-icon {
+.team-icon-a:hover .team-icon,
+.team-icon-a:focus .team-icon {
     
     fill: #ffffff;
 }
@@ -590,11 +595,13 @@ textarea {
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.regular-customers-icon-a:hover .regular-customers-div {
+.regular-customers-icon-a:hover .regular-customers-div,
+.regular-customers-icon-a:focus .regular-customers-div {
     border-color: var(--active-link-color);
 }
 
-.regular-customers-icon-a:hover .regular-customers-icon {
+.regular-customers-icon-a:hover .regular-customers-icon,
+.regular-customers-icon-a:focus .regular-customers-icon {
     fill: var(--active-link-color);
 }
 
@@ -669,7 +676,8 @@ address {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-footer-icon-a:hover .social-footer-icon-div{
+.social-footer-icon-a:hover .social-footer-icon-div,
+.social-footer-icon-a:focus .social-footer-icon-div {
     background: var(--active-link-color);
 }
 
