--- a/css/styles.css
+++ b/css/styles.css
@@ -512,20 +512,23 @@ textarea {
     justify-content: center;
 }
 
-.team-icon-link {
+.team-icon-a {
     display: block;
     height: 44px;
     width: 44px;
     border-radius: 50%;
 }
 
-.team-icon-a .team-icon-link {
+.team-icon-a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #fff;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-icon-a:hover .team-icon-link,
-.team-icon-a:focus .team-icon-link {
+.team-icon-a:hover,
+.team-icon-a:focus {
     background-color: var(--active-link-color);
 }
 
@@ -533,7 +536,6 @@ textarea {
     width: 20px;
     height: 20px;
     fill: #AFB1B8;
-    margin: 12px;
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -595,8 +597,8 @@ textarea {
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.regular-customers-icon-a:hover .regular-customers-div,
-.regular-customers-icon-a:focus .regular-customers-div {
+.regular-customers-icon-a:hover,
+.regular-customers-icon-a:focus {
     border-color: var(--active-link-color);
 }
 
@@ -666,7 +668,7 @@ address {
     margin: 12px;
 }
 
-.social-footer-icon-div {
+.social-footer-icon-a {
     display: block;
     height: 44px;
     width: 44px;
@@ -676,8 +678,8 @@ address {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-footer-icon-a:hover .social-footer-icon-div,
-.social-footer-icon-a:focus .social-footer-icon-div {
+.social-footer-icon-a:hover,
+.social-footer-icon-a:focus {
     background: var(--active-link-color);
 }
 
