--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,10 @@ textarea {
     resize: none;
 }
 
+header {
+    border-bottom: 1px solid #ECECEC;
+}
+
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
